boulder/tests/error/scope/unknown_label.bo
# Cannot find scope `hey` in this scope
# (6:

fn unknown_label() -> u32 {
    'hi: {
        break 'hey 7;
        7
    }
}